# Kaleido

./: README.md  docker.md  gist.md  go.md  springboot.md  wsl.md
cygwin/: Cygwin Bash Here.reg  Uninstall-Cygwin Bash Here.reg  cygwin.bat  cygwin.md
docker/: docker.md
jenkins/: jenkins.md
kaleido4c/: CMakeLists.txt  README.md
kaleido4c/src/: args.h  curlkit.h  curlmultikit.h  main.cc  picosha2.h  utils.h
kaleido4c/test/: test_test.cc
kaleido4go/: kaleido4go.go
kaleido4go/action/: action.go
kaleido4go/arg/: arg.go
kaleido4go/sqlkit/: sqlkit.go
kaleido4j/: pom.xml
kaleido4j/src/main/java/com/tosh/kaleido/: Kaleido4jApplication.java
kaleido4j/src/main/java/com/tosh/kaleido/config/: MybatisPlusConfig.java  Operator.java  WebConfigurer.java
kaleido4j/src/main/java/com/tosh/kaleido/controller/: BannerController.java
kaleido4j/src/main/java/com/tosh/kaleido/enums/: BannerStatus.java  RedisKey.java
kaleido4j/src/main/java/com/tosh/kaleido/handler/: MPMetaObjectHandler.java
kaleido4j/src/main/java/com/tosh/kaleido/interceptor/: CORSInterceptor.java  LogInterceptor.java  RateLimiterInterceptor.java
kaleido4j/src/main/java/com/tosh/kaleido/main/: MagicMain.java  MinioMain.java  PoiDemo.java
kaleido4j/src/main/java/com/tosh/kaleido/mapper/: BannerMapper.java
kaleido4j/src/main/java/com/tosh/kaleido/service/: IBannerService.java
kaleido4j/src/main/java/com/tosh/kaleido/utils/: AesUtils.java  IDUtils.java  (+2 more)
kaleido4j/src/main/resources/: application-dev.yml  application.yml  logback-spring.xml
kaleido4j/src/main/resources/sql/: t_banner.sql
kaleido4j/src/test/java/com/tosh/kaleido/: Kaleido4jApplicationTests.java
lede/: lede.md
mysql/: my.ini  refine-my.cnf
script/: app.sh
vaiwan/: README.md
winsw/: winsw.xml
wsl/: CygwinBashHere.reg  Uninstall-CygwinBashHere.reg  Uninstall-WSL Bash Here.reg  WSL Bash Here 4 Cmder.reg  WSL Bash Here.reg  wsl.md
(+14 files in other folders)
